# mpia-event-website-template

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  index.html  setup.cfg
.github/workflows/: docs.yml
css/: bootstrap.min.css  style.css
docs/: Makefile  build.py  config.yml
docs/content/: code-of-conduct.md  help.md  index.md  logistics.md  organizers.md  overview.md  participants.md  programme.md  speakers.md  travel-mpia.md  venue-mpia.md
docs/simplewebsite/: __init__.py  markdown.py
docs/simplewebsite/themes/default/: index.py
docs/simplewebsite/themes/default/templates/: schedule.html  section.html
docs/static/: README.md
src/simplewebsite/themes/default/: __init__.py
src/simplewebsite/themes/default/templates/: index.html  speakers.html
tests/: test_example.py
