[metadata]
name = mpia-conference-website-template
version = 0.0.1
author = Morgan Fouesneau
author_email = fouesneau@mpia.de
description = A simplified website generator for conferences
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/
project_urls =
    Bug Tracker = https://github.com/
    Sourse Code = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7
include_package_data = true

# Example of how to add dependencies:
install_requires =
  importlib-metadata >= 2.0 ; python_version < "3.8"
  markdown
  pyyaml

[options.packages.find]
where = src

[options.extras_require]
docs =
  markdown
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov